Wed Jan 25 19:25:02 1995  Mark Eichin  (eichin@cygnus.com)

	* kadm.h: add DEL_ENT and DEL_ACL for CNS V4 delete support.

Fri Nov 18 01:24:58 1994  Mark Eichin  <eichin@cygnus.com>

	* Makefile.in (install): use $(INSTALL_DATA) instead of cp. Elide
	dependency in install rule so $(srcdir) works.
	* configure.in: use AC_PROG_INSTALL.

Fri Nov 18 00:17:03 1994  Mark Eichin  <eichin@cygnus.com>

	* configure.in: add WITH_CCOPTS.

Mon Oct  3 18:50:25 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: make install obey $(DESTDIR)

	* Makefile.in: Fix "make install" to use $(srcdir) when copying in
		header files.
