@@ -1,3 +1,7 @@
+Fri Feb  3 06:50:46 1995  Theodore Y. Ts'o  (tytso@dcl)
+
+	* krb.h: Add changes to make this work on Alpha's.  
+
 Wed Jan 25 19:25:02 1995  Mark Eichin  (eichin@cygnus.com)
 
 	* kadm.h: add DEL_ENT and DEL_ACL for CNS V4 delete support.
